# Simple-Text-Editor

./: CMakeLists.txt
includes/: TextEditor.cpp  TextEditor.h  textEditor.cpp  textEditor.h
src/: TextEditor.cpp  main.cpp
